[gd_scene format=3 uid="uid://sx0w03itiw5k"]

[ext_resource type="Script" uid="uid://dq5teo14i14h" path="res://Scripts/win_screen.gd" id="1_a00f1"]
[ext_resource type="Theme" uid="uid://16cxf3mnxh58" path="res://Assets/Resources/Button.tres" id="1_l5sol"]

[node name="WinScreen" type="Control" unique_id=180070478]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_a00f1")

[node name="CenterContainer" type="CenterContainer" parent="." unique_id=2045390980]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer" unique_id=1869489392]
layout_mode = 2

[node name="Label" type="Label" parent="CenterContainer/VBoxContainer" unique_id=1833576642]
layout_mode = 2
theme_override_font_sizes/font_size = 70
text = "You Win"
horizontal_alignment = 1

[node name="NextLevel" type="Button" parent="CenterContainer/VBoxContainer" unique_id=1027086347]
layout_mode = 2
theme = ExtResource("1_l5sol")
theme_override_font_sizes/font_size = 64
text = "Next Level"

[node name="Restart" type="Button" parent="CenterContainer/VBoxContainer" unique_id=1101414619]
layout_mode = 2
theme = ExtResource("1_l5sol")
theme_override_font_sizes/font_size = 64
text = "Restart"

[node name="MainMenu" type="Button" parent="CenterContainer/VBoxContainer" unique_id=836620394]
layout_mode = 2
theme = ExtResource("1_l5sol")
theme_override_font_sizes/font_size = 64
text = "Main Menu"

[connection signal="pressed" from="CenterContainer/VBoxContainer/NextLevel" to="." method="_on_next_level_pressed"]
[connection signal="pressed" from="CenterContainer/VBoxContainer/Restart" to="." method="_on_restart_pressed"]
[connection signal="pressed" from="CenterContainer/VBoxContainer/MainMenu" to="." method="_on_main_menu_pressed"]
